--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="container">
+            <nav class="navbar">
+            
+                <div class="header-logo">Header Logo</div>
+                <div class="header-link">
+                    <a href="">About</a>
+                    <a href="">Shop</a>
+                    <a href="">Contact</a>
+                </div>
+
+            
+                </nav>
+        </div>
     </body>
 </html>
